apps/external/pfsense/IngressRoute.yaml

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pfsense-ing-route
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`pfsense.dcunha.io`)
    kind: Rule
    services:
    - name: pfsense-svc
      port: 10443
    middlewares:
    - name: default-headers
  tls:
    secretName: dcunha-io-tls
    # domains:
    # - main: pihole.dcunha.io
